Prefer type options to mapping options for __key/this fields